Added items with toggle buttons and using cache

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,15 @@ server/node_modules/
 client/build/
 server/dist/
 .env
+
+# Docker files
+Dockerfile
+# Shell scripts
+*.sh
+
+# Batch script and other files
+run.bat
+sources.txt
+runtime/
+installer/
+commands/
