--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 # example netlify.toml
 [build]
-  base = "client"
-  command = "npm run build"
+  command = "npm run build --prefix client"
   functions = "netlify/functions"
   publish = "client/build"
 
