--- a/netlify.toml
+++ b/netlify.toml
@@ -1,21 +1,16 @@
-# example netlify.toml
 [build]
-  command = "npm run build --prefix client"
-  functions = "netlify/functions"
+  command = "npm install --prefix client && npm run build --prefix client"
   publish = "client/build"
 
-  ## Uncomment to use this redirect for Single Page Applications like create-react-app.
-  ## Not needed for static site generators.
-  #[[redirects]]
-  #  from = "/*"
-  #  to = "/index.html"
-  #  status = 200
+[functions]
+  directory = "netlify/functions"
+  node_bundler = "esbuild"
+  external_node_modules = ["mongoose"]
 
-  ## (optional) Settings for Netlify Dev
-  ## https://github.com/netlify/cli/blob/main/docs/netlify-dev.md#project-detection
-  #[dev]
-  #  command = "yarn start" # Command to start your dev server
-  #  port = 3000 # Port that the dev server will be listening on
-  #  publish = "dist" # Folder with the static content for _redirect file
+[functions.timeout]
+  default = 120
 
-  ## more info on configuring this file: https://ntl.fyi/file-based-build-config
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
