--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Pokédex by JC3P0",
+  "name": "Pokédex by JC3P0 using Pokéapi",
   "icons": [
 
   ],
